--- a/day24.ipynb
+++ b/day24.ipynb
@@ -12,7 +12,16 @@
     "I pulled up the Dijkstra search I wrote for day 12 and modified it to do A*.\n",
     "\n",
     "I created a `ValleyMap` object which has *n* `ValleyMapState` objects where *n* is the period of the map. The period of the map is the LCM(width, height) where width, height are the interior dimension (so exclude the band of 1 around the outside). This allows precomputing location of walkable ground at every timestep in constant time lookup after all *n* states have been precomputed. n = lcm(6, 4) = 12 for the example and n = lcm(35, 100) = 700 for the real input file.\n",
-    "\n"
+    "\n",
+    "The search runs A* where a vertex has 3 components: (time, (y, x)). Each edge increases time. So the cost is encoding both in the edge cost and the first component of the vertex. This is so that the vertex alone can be used to check against the precomputed valley states to see which of 5 possible neighbours (stay still time+1, move north time+1, move south time+1, move east time+1, move west time+1) is walkable ground (no wind).\n",
+    "\n",
+    "Part 2 was trivially adaptable form the solution by running the search 3 times. I used a single main method so it does the pre-computation step, then part 1, then the two extra trips for part 2.\n",
+    "\n",
+    "Pre-computation: 6 seconds\n",
+    "\n",
+    "Part 1: 6 seconds\n",
+    "\n",
+    "Part 2: 15 seconds"
    ],
    "metadata": {
     "collapsed": false
@@ -57,7 +66,7 @@
     "import numpy as np\n",
     "from math import lcm\n",
     "from tqdm.autonotebook import tqdm\n",
-    "from typing import Iterator, Callable"
+    "from typing import Iterator, Callable, Any"
    ],
    "metadata": {
     "collapsed": false
@@ -196,7 +205,7 @@
     "\n",
     "class ValleyMap:\n",
     "\n",
-    "    __slots__ = ['height', 'width', 'states', 'horizontal_period', 'vertical_period', 'period', 'start', 'end', 'heuristic']\n",
+    "    __slots__ = ['height', 'width', 'states', 'horizontal_period', 'vertical_period', 'period', 'start', 'end', 'heuristic', 'reverse_heuristic']\n",
     "\n",
     "    def __init__(self, arr: np.ndarray):\n",
     "        self.height, self.width = arr.shape\n",
@@ -216,7 +225,11 @@
     "        def heuristic(vertex: tuple[int, tuple[int, int]]) -> int:\n",
     "            _, point = vertex\n",
     "            return manhattan(point, self.end)\n",
+    "        def reverse_heuristic(vertex: tuple[int, tuple[int, int]]) -> int:\n",
+    "            _, point = vertex\n",
+    "            return manhattan(point, self.start)\n",
     "        self.heuristic: Callable[[tuple[int, tuple[int, int]]], int] = heuristic\n",
+    "        self.reverse_heuristic: Callable[[tuple[int, tuple[int, int]]], int] = reverse_heuristic\n",
     "\n",
     "    def neighbours(self, vertex: tuple[int, tuple[int, int]]) -> tuple[tuple[int, tuple[int, int]], int]:\n",
     "        time, point = vertex\n",
@@ -228,16 +241,19 @@
     "        _, point = vertex\n",
     "        return point == self.end\n",
     "\n",
+    "    def reverse_is_goal(self, vertex: tuple[int, tuple[int, int]]) -> bool:\n",
+    "        _, point = vertex\n",
+    "        return point == self.start\n",
+    "\n",
     "    def is_ground(self, time: int, loc: tuple[int, int]) -> bool:\n",
     "        return self[time].is_ground(loc)\n",
     "\n",
-    "    def precompute_states(self, pbar: bool = False) -> None:\n",
-    "        if pbar:\n",
-    "            for i in tqdm(range(self.period), desc='Precomputing Valley States'):\n",
-    "                _ = self[i]  # called for side effect\n",
-    "        else:\n",
-    "            for i in range(self.period):\n",
-    "                _ = self[i]  # called for side effect\n",
+    "    def precompute_states(self, pbar: Callable[[Any], None] = None) -> None:\n",
+    "        if pbar is None:\n",
+    "            pbar = lambda x: None\n",
+    "        for i in range(self.period):\n",
+    "            _ = self[i]  # called for side effect\n",
+    "            pbar(1)\n",
     "        assert None not in self.states\n",
     "\n",
     "    def __getitem__(self, item: int) -> ValleyMapState:\n",
@@ -282,25 +298,54 @@
    "source": [
     "def main():\n",
     "\n",
+    "    global INPUT_FILE\n",
+    "\n",
     "    # load the valley and precompute states\n",
     "    valley_map = ValleyMap.read(INPUT_FILE)\n",
-    "    valley_map.precompute_states(pbar=(valley_map.period > 12))\n",
-    "    print('Precomputed states')\n",
     "\n",
-    "    # start state is valley start point a time 0\n",
-    "    start = 0, valley_map.start\n",
+    "    with tqdm(desc='Precomputing Wind Positions', total=valley_map.period) as pbar:\n",
     "\n",
-    "    path, visited = a_star(ArrayHeap,\n",
-    "                           start,\n",
-    "                           valley_map.neighbours,\n",
-    "                           valley_map.is_goal,\n",
-    "                           valley_map.heuristic,\n",
-    "                           pbar=(valley_map.period > 12))\n",
+    "        valley_map.precompute_states(pbar=pbar.update)\n",
     "\n",
-    "    end_time, end_point = path[-1]\n",
-    "    assert end_point == valley_map.end\n",
+    "    with tqdm(desc='Solving Part 1') as pbar:\n",
     "\n",
-    "    print(f'Shortest path to {end_point} is after {end_time} time steps')"
+    "        # search start -> end\n",
+    "        start = 0, valley_map.start\n",
+    "        path, visited = a_star(ArrayHeap,\n",
+    "                               start,\n",
+    "                               valley_map.neighbours,\n",
+    "                               valley_map.is_goal,\n",
+    "                               valley_map.heuristic,\n",
+    "                               pbar=pbar.update)\n",
+    "        end_time, end_point = path[-1]\n",
+    "        assert end_point == valley_map.end\n",
+    "        print(f'Answer to part 1: Shortest path start -> end is {end_time} minutes')\n",
+    "\n",
+    "    with tqdm(desc='Solving Part 2') as pbar:\n",
+    "\n",
+    "        # search end -> start\n",
+    "        start = end_time, end_point\n",
+    "        path, visited = a_star(ArrayHeap,\n",
+    "                               start,\n",
+    "                               valley_map.neighbours,\n",
+    "                               valley_map.reverse_is_goal,\n",
+    "                               valley_map.reverse_heuristic,\n",
+    "                               pbar=pbar.update)\n",
+    "        end_time, end_point = path[-1]\n",
+    "        assert end_point == valley_map.start\n",
+    "\n",
+    "        # search start -> end\n",
+    "        start = end_time, end_point\n",
+    "        path, visited = a_star(ArrayHeap,\n",
+    "                               start,\n",
+    "                               valley_map.neighbours,\n",
+    "                               valley_map.is_goal,\n",
+    "                               valley_map.heuristic,\n",
+    "                               pbar=pbar.update)\n",
+    "        end_time, end_point = path[-1]\n",
+    "        assert end_point == valley_map.end\n",
+    "\n",
+    "    print(f'Answer to part 2: Shortest path from start -> end -> start -> end is {end_time} minutes round trip')"
    ],
    "metadata": {
     "collapsed": false
@@ -311,8 +356,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "INPUT_FILE = 'data/example24.txt'\n",
-    "#INPUT_FILE = 'data/input24.txt'\n",
+    "#INPUT_FILE = 'data/example24.txt'\n",
+    "INPUT_FILE = 'data/input24.txt'\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
