added binary heap

--- a/day24.ipynb
+++ b/day24.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "from time import perf_counter\n",
+    "start_time = perf_counter()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Advent of Code 2022\n",
@@ -17,11 +30,9 @@
     "\n",
     "Part 2 was trivially adaptable form the solution by running the search 3 times. I used a single main method so it does the pre-computation step, then part 1, then the two extra trips for part 2.\n",
     "\n",
-    "Pre-computation: 6 seconds\n",
+    "I tidied the search implementation by coding a binary heap instead of a dumb array heap, now the solver is very fast. Most of the time is taken pre-computing wind position. I wanted to see how long it would take to run the whole notebook, that's why `perf_counter` is called at the top.\n",
     "\n",
-    "Part 1: 6 seconds\n",
-    "\n",
-    "Part 2: 15 seconds"
+    "**Overall notebook runtime:** 9.6 sec"
    ],
    "metadata": {
     "collapsed": false
@@ -43,7 +54,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from day24.search import a_star, ArrayHeap, manhattan"
+    "from day24.search import a_star, BinaryHeap, manhattan"
    ],
    "metadata": {
     "collapsed": false
@@ -311,7 +322,7 @@
     "\n",
     "        # search start -> end\n",
     "        start = 0, valley_map.start\n",
-    "        path, visited = a_star(ArrayHeap,\n",
+    "        path, visited = a_star(BinaryHeap,\n",
     "                               start,\n",
     "                               valley_map.neighbours,\n",
     "                               valley_map.is_goal,\n",
@@ -325,7 +336,7 @@
     "\n",
     "        # search end -> start\n",
     "        start = end_time, end_point\n",
-    "        path, visited = a_star(ArrayHeap,\n",
+    "        path, visited = a_star(BinaryHeap,\n",
     "                               start,\n",
     "                               valley_map.neighbours,\n",
     "                               valley_map.reverse_is_goal,\n",
@@ -336,7 +347,7 @@
     "\n",
     "        # search start -> end\n",
     "        start = end_time, end_point\n",
-    "        path, visited = a_star(ArrayHeap,\n",
+    "        path, visited = a_star(BinaryHeap,\n",
     "                               start,\n",
     "                               valley_map.neighbours,\n",
     "                               valley_map.is_goal,\n",
@@ -356,11 +367,21 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#INPUT_FILE = 'data/example24.txt'\n",
     "INPUT_FILE = 'data/input24.txt'\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(f'Time to run entire notebook: {perf_counter() - start_time:.3f} sec')"
    ],
    "metadata": {
     "collapsed": false
