--- a/stats.ipynb
+++ b/stats.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "first_day = 1\n",
-    "last_day = 16\n",
+    "last_day = 25\n",
     "\n",
     "html = {}\n",
     "\n",
@@ -210,7 +210,7 @@
     "       color_continuous_scale=[r'rgba(0,0,0,0)'] + [f'rgba({r},0,{255-r},1)' for r in np.linspace(0, 255, 100)],\n",
     "       height=675,\n",
     "       width=1200,\n",
-    "       log_y=True)"
+    "       log_y=False)"
    ],
    "metadata": {
     "collapsed": false
