added split lines loader function

--- a/2015/day02.ipynb
+++ b/2015/day02.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "import aoc\n",
     "\n",
-    "DATA = [tuple(map(int, line.split('x'))) for line in aoc.load_lines('data/input02.txt')]"
+    "DATA = aoc.load_split_lines('data/input02.txt', 'x', int)"
    ],
    "metadata": {
     "collapsed": false
