--- a/2015/day12.ipynb
+++ b/2015/day12.ipynb
@@ -62,7 +62,7 @@
     "    if buffer:\n",
     "        yield int(buffer)\n",
     "\n",
-    "print(f'The total of all the numbers in teh JSON file is {sum(integers_in_string(INPUT))}')"
+    "print(f'The total of all the numbers in the JSON file is {sum(integers_in_string(INPUT))}')"
    ],
    "metadata": {
     "collapsed": false
@@ -81,7 +81,58 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "import json"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def sum_of_numbers(obj):\n",
+    "\n",
+    "    assert type(obj) in (list, str, dict, int)\n",
+    "\n",
+    "    if type(obj) == int:\n",
+    "        return obj\n",
+    "\n",
+    "    if type(obj) == str:\n",
+    "        return 0\n",
+    "\n",
+    "    if type(obj) == list:\n",
+    "        total = 0\n",
+    "        for element in obj:\n",
+    "            total += sum_of_numbers(element)\n",
+    "        return total\n",
+    "\n",
+    "    if type(obj) == dict:\n",
+    "\n",
+    "        for k, v in obj.items():\n",
+    "            assert type(k) == str\n",
+    "            assert k != 'red'\n",
+    "            if v == 'red':\n",
+    "                return 0\n",
+    "\n",
+    "        total = 0\n",
+    "        for v in obj.values():\n",
+    "            total += sum_of_numbers(v)\n",
+    "        return total"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(f'The total of all the numbers in the JSON file is without red things is {sum_of_numbers(json.loads(INPUT))}')"
+   ],
    "metadata": {
     "collapsed": false
    }
