--- a/2015/day07.ipynb
+++ b/2015/day07.ipynb
@@ -30,6 +30,7 @@
    "outputs": [],
    "source": [
     "from typing import Union\n",
+    "from abc import *\n",
     "\n",
     "class uint16:\n",
     "\n",
