--- a/2015/day14.ipynb
+++ b/2015/day14.ipynb
@@ -18,6 +18,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "from collections import Counter\n",
+    "\n",
     "from aoc import *"
    ],
    "metadata": {
@@ -85,10 +87,29 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Part 2"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "scores = Counter()\n",
+    "for second in range(1, TIME_LIMIT + 1):\n",
+    "    max_distance, _ = optimize(DATA, lambda r: r.calculate_distance(second))\n",
+    "    for r in DATA:\n",
+    "        if r.calculate_distance(second) == max_distance:\n",
+    "            scores[r.name] += 1\n",
+    "deer_name, score = scores.most_common(1)[0]\n",
+    "\n",
+    "print(f'The reindeer with the highest score, {deer_name} has a score of {score}.')"
+   ],
    "metadata": {
     "collapsed": false
    }
