--- a/2015/day21.ipynb
+++ b/2015/day21.ipynb
@@ -169,7 +169,16 @@
     "        attacker, defender = defender, attacker\n",
     "    if boss.hp <= 0:\n",
     "        return True, calc_total_cost(weapon, armor, rings)\n",
-    "    return False, 0"
+    "    return False, calc_total_cost(weapon, armor, rings)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Part 1"
    ],
    "metadata": {
     "collapsed": false
@@ -202,6 +211,55 @@
     "    print(f'ERROR! Did not find any winning setup!')\n",
     "else:\n",
     "    print(f'Lowest Winning Cost: {lowest_winning_cost} gold')\n",
+    "    print()\n",
+    "    weapon, armor, rings = associated_setup\n",
+    "    print(f'Weapon: {weapon}')\n",
+    "    print(f'Armor: {armor}')\n",
+    "    print(f'Rings: {rings}')\n",
+    "    print()\n",
+    "    print(f'Wins: {win_count}')\n",
+    "    print(f'Loses: {lose_count}')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Part 2"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "highest_losing_cost = None\n",
+    "associated_setup = None\n",
+    "\n",
+    "win_count = 0\n",
+    "lose_count = 0\n",
+    "\n",
+    "for weapon, armor, rings in tqdm(VALID_CHOICES):\n",
+    "    player_wins, total_cost = eval(weapon, armor, rings)\n",
+    "    if player_wins:\n",
+    "        win_count += 1\n",
+    "    else:\n",
+    "        lose_count += 1\n",
+    "    if (not player_wins) and (highest_losing_cost is None or total_cost > highest_losing_cost):\n",
+    "        highest_losing_cost = total_cost\n",
+    "        associated_setup = weapon, armor, rings\n",
+    "\n",
+    "if highest_losing_cost is None:\n",
+    "    print(f'ERROR! Did not find any losing setup!')\n",
+    "else:\n",
+    "    print(f'Highest Losing Cost: {highest_losing_cost} gold')\n",
     "    print()\n",
     "    weapon, armor, rings = associated_setup\n",
     "    print(f'Weapon: {weapon}')\n",
