2015 day 1 in Swift!

--- a/2015/day01.ipynb
+++ b/2015/day01.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import aoc\n",
@@ -37,8 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The instructions end at floor 138\n"
+     ]
+    }
+   ],
    "source": [
     "final_floor = DATA.count('(') - DATA.count(')')\n",
     "\n",
@@ -59,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def find_target_floor(data: str, target: int) -> int:\n",
@@ -81,8 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The instructions reach the basement at position 1771\n"
+     ]
+    }
+   ],
    "source": [
     "position = find_target_floor(DATA, -1)\n",
     "\n",
