--- a/2015/day02.ipynb
+++ b/2015/day02.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import aoc\n",
@@ -37,8 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "They should order 1588178 square feet of wrapping paper\n"
+     ]
+    }
+   ],
    "source": [
     "total_area = 0\n",
     "\n",
@@ -70,8 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "They should order 3783758 feet of ribbon\n"
+     ]
+    }
+   ],
    "source": [
     "total_length = 0\n",
     "\n",
