--- a/2015/day03.ipynb
+++ b/2015/day03.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from aoc import *\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def loop_positions(velocities, start, visited):\n",
@@ -52,8 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2572 houses receive at least 1 present\n"
+     ]
+    }
+   ],
    "source": [
     "visited = set()\n",
     "loop_positions(DATA, Position(), visited)\n",
@@ -76,8 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2631 houses receive at least 1 present\n"
+     ]
+    }
+   ],
    "source": [
     "visited = set()\n",
     "loop_positions(DATA[0::2], Position(), visited)\n",
