--- a/2015/day05.ipynb
+++ b/2015/day05.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from aoc import *\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def is_nice1(candidate_string: str) -> bool:\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def count_nice(strings, rule):\n",
@@ -85,8 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 258 nice strings\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'There are {count_nice(DATA, is_nice1)} nice strings')"
    ],
@@ -105,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def has_repeat_with_one_letter_between(candidate_string: str) -> bool:\n",
@@ -123,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def has_two_letters_repeat(candidate_string: str) -> bool:\n",
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def is_nice2(candidate_string):\n",
@@ -153,8 +161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 53 nice strings\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'There are {count_nice(DATA, is_nice2)} nice strings')"
    ],
