--- a/2015/day21.ipynb
+++ b/2015/day21.ipynb
@@ -210,15 +210,7 @@
     "if lowest_winning_cost is None:\n",
     "    print(f'ERROR! Did not find any winning setup!')\n",
     "else:\n",
-    "    print(f'Lowest Winning Cost: {lowest_winning_cost} gold')\n",
-    "    print()\n",
-    "    weapon, armor, rings = associated_setup\n",
-    "    print(f'Weapon: {weapon}')\n",
-    "    print(f'Armor: {armor}')\n",
-    "    print(f'Rings: {rings}')\n",
-    "    print()\n",
-    "    print(f'Wins: {win_count}')\n",
-    "    print(f'Loses: {lose_count}')"
+    "    print(f'Lowest Winning Cost: {lowest_winning_cost} gold')"
    ],
    "metadata": {
     "collapsed": false
@@ -259,15 +251,7 @@
     "if highest_losing_cost is None:\n",
     "    print(f'ERROR! Did not find any losing setup!')\n",
     "else:\n",
-    "    print(f'Highest Losing Cost: {highest_losing_cost} gold')\n",
-    "    print()\n",
-    "    weapon, armor, rings = associated_setup\n",
-    "    print(f'Weapon: {weapon}')\n",
-    "    print(f'Armor: {armor}')\n",
-    "    print(f'Rings: {rings}')\n",
-    "    print()\n",
-    "    print(f'Wins: {win_count}')\n",
-    "    print(f'Loses: {lose_count}')"
+    "    print(f'Highest Losing Cost: {highest_losing_cost} gold')"
    ],
    "metadata": {
     "collapsed": false
