done day 9, starting day19 part 2

--- a/2015/day09.ipynb
+++ b/2015/day09.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "from aoc import *\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "distance_matrix = defaultdict(lambda: defaultdict(int))\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "def total_distance(perm, distance_matrix):\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "best = None\n",
@@ -95,8 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shortest distance is 117\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'The shortest distance is {best}')"
    ],
@@ -115,8 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 26,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The longest distance is 909\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'The longest distance is {worst}')"
    ],
