work on day 19 2015

--- a/2015/day19.ipynb
+++ b/2015/day19.ipynb
@@ -287,23 +287,58 @@
    "outputs": [],
    "source": [
     "def has_collision(set_1: set[tuple[int]], set_2: set[tuple[int]]) -> bool:\n",
-    "    return False  # TODO\n",
+    "    for x in set_1:\n",
+    "        if x in set_2:\n",
+    "            return True\n",
+    "    return False\n",
     "\n",
     "\n",
     "def advance_forward(current_forward_depth: int,\n",
-    "                    current_forward_lower_depth_strings: set[tuple[int]],\n",
+    "                    current_forward_lower_or_equal_depth_strings: set[tuple[int]],\n",
     "                    current_forward_string: set[tuple[int]]) -> int:\n",
-    "    print('advancing forward')\n",
-    "    return current_forward_depth + 1 # TODO\n",
+    "    print(f'advancing forward from depth {current_forward_depth} to depth {current_forward_depth + 1}, front size is {len(current_forward_string)}')\n",
+    "    new_forward_string = set()\n",
+    "    for current in current_forward_string:\n",
+    "        for index, value in enumerate(current):\n",
+    "            if value in ENCODED_FORWARD_REPLACEMENTS:\n",
+    "                for replacement in ENCODED_FORWARD_REPLACEMENTS[value]:\n",
+    "                    new_value = current[:index] + replacement + current[index+1:]\n",
+    "                    #print(f'replace {value} at index {index} of {current} with {replacement} to make {new_value}')\n",
+    "                    if new_value not in current_forward_lower_or_equal_depth_strings:\n",
+    "                        current_forward_lower_or_equal_depth_strings.add(new_value)\n",
+    "                        new_forward_string.add(new_value)\n",
+    "    current_forward_string.clear()\n",
+    "    current_forward_string.update(new_forward_string)\n",
+    "    return current_forward_depth + 1\n",
     "\n",
     "\n",
     "def advance_backward(current_backward_depth: int,\n",
-    "                     current_backward_lower_depth_strings: set[tuple[int]],\n",
+    "                     current_backward_lower_or_equal_depth_strings: set[tuple[int]],\n",
     "                     current_backward_string: set[tuple[int]]) -> int:\n",
-    "    print('advancing backward')\n",
-    "    return current_backward_depth + 1 # TODO\n",
-    "\n",
-    "\n",
+    "    print(f'advancing backward from depth {current_backward_depth} to depth {current_backward_depth + 1}, front size is {len(current_backward_string)}')\n",
+    "    new_backward_string = set()\n",
+    "    for current in current_backward_string:\n",
+    "        for index in range(len(current)):\n",
+    "            for match, replacement in ENCODED_BACKWARD_REPLACEMENTS.items():\n",
+    "                if current[index:index+len(match)] == match:\n",
+    "                    new_value = current[:index] + (replacement, ) + current[index+len(match):]\n",
+    "                    #print(f'replace {match} at index {index} of {current} with {replacement} to make {new_value}')\n",
+    "                    if new_value not in current_backward_lower_or_equal_depth_strings:\n",
+    "                        current_backward_lower_or_equal_depth_strings.add(new_value)\n",
+    "                        new_backward_string.add(new_value)\n",
+    "    current_backward_string.clear()\n",
+    "    current_backward_string.update(new_backward_string)\n",
+    "    return current_backward_depth + 1"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "def solve_part_2(encoded_start_point: tuple[int], encoded_end_point: tuple[int]) -> int:\n",
     "\n",
     "    print(f'start point is = {encoded_start_point}')\n",
@@ -338,17 +373,7 @@
     "            current_backward_depth = advance_backward(current_backward_depth, current_backward_lower_depth_strings, current_backward_string)\n",
     "\n",
     "\n",
-    "    # TODO"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
+    "\n",
     "solve_part_2(ENCODED_START_POINT, ENCODED_END_POINT)"
    ],
    "metadata": {
@@ -359,16 +384,27 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "print(f'start point is = {ENCODED_START_POINT}')\n",
+    "\n",
+    "current_forward_depth = 0\n",
+    "\n",
+    "current_forward_lower_depth_strings = set() # non yet by definition, we are at zero\n",
+    "current_forward_string = {ENCODED_START_POINT} # only one for now\n",
+    "\n",
+    "while True:\n",
+    "\n",
+    "    current_forward_depth = advance_forward(current_forward_depth, current_forward_lower_depth_strings, current_forward_string)"
+   ],
    "metadata": {
     "collapsed": false
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "Can go about 10 steps forward from start and about 4 steps backward from end."
+   ],
    "metadata": {
     "collapsed": false
    }
